--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@angular/common": "~8.2.7",
     "@angular/compiler": "~8.2.7",
     "@angular/core": "~8.2.7",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~8.2.7",
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "angularfire2": "^5.4.2",
     "bootstrap": "^4.3.1",
+    "firebase": "^7.15.5",
     "font-awesome": "^4.7.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^5.1.2",
